[package]
name = "wasm"
version = "0.1.0"
authors = ["John Gallagher <john.willis.gallagher@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"

# Config mostly pulled from: https://github.com/rustwasm/wasm-bindgen/blob/master/examples/fetch/Cargo.toml

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = { git = "https://github.com/cyrup-ai/reqwest" }
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
wasm-bindgen-futures = "0.4.1"
serde_json = "1.0.145"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"]  }
